--- a/src/app/main-content/landing/landing.component.html
+++ b/src/app/main-content/landing/landing.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="text-container">
         <div class="headline">
-            <span data-aos="fade-down" data-aos-duration="1000" data-aos-delay="600">I am</span>
+            <span data-aos="fade-down" data-aos-duration="1000" data-aos-delay="600" translate>I am</span>
             <div class="main-headline" data-aos="fade-left" data-aos-duration="1000">
                 <h1>Tobias Termer</h1>
                 <h3 translate>Fullstack Developer</h3>
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="scroll-down-container mobile-hidden">
-        <p class="scroll-down-text">Scroll down</p>
+        <p class="scroll-down-text" translate>Scroll down</p>
         <img class="scroll-down-icon" src="../../../assets/img/icons/arrow-right-line.png" alt="">
     </div>
 
