--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -16,6 +16,6 @@
             </div>
         </div>
     </div>
-    <a href="/impressum">Impressum</a>
+    <a href="/impressum" translate>Impressum</a>
 
 </footer>
