--- a/src/app/shared/header-mobile/header-mobile.component.html
+++ b/src/app/shared/header-mobile/header-mobile.component.html
@@ -11,23 +11,23 @@
                 <a class="language-link" href="" (click)="clickLink()">EN</a>
             </div>
             <div class="nav-child">
-                <a class="nav-link" href="#aboutme" (click)="clickLink()">About me</a>
+                <a class="nav-link" href="#aboutme" (click)="clickLink()" translate>About me</a>
                 <div class="underline"></div>
             </div>
             <div class="nav-child">
-                <a class="nav-link" href="#skills" (click)="clickLink()">Skills</a>
+                <a class="nav-link" href="#skills" (click)="clickLink()" translate>Skills</a>
                 <div class="underline"></div>
             </div>
             <div class="nav-child">
-                <a class="nav-link" href="#portfolio" (click)="clickLink()">Portfolio</a>
+                <a class="nav-link" href="#portfolio" (click)="clickLink()" translate>Portfolio</a>
                 <div class="underline"></div>
             </div>
             <div class="nav-child">
-                <a class="nav-link" href="#contact" (click)="clickLink()">Contact</a>
+                <a class="nav-link" href="#contact" (click)="clickLink()" translate>Contact</a>
                 <div class="underline"></div>
             </div>
             <div class="nav-child">
-                <a class="nav-link" href="/impressum" (click)="clickLink()">Impressum</a>
+                <a class="nav-link" href="/impressum" (click)="clickLink()" translate>Impressum</a>
                 <div class="underline"></div>
             </div>
         </div>
