--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,10 +1,10 @@
 <section id="aboutme">
 
     <div class="about-me-content-container" data-aos="fade-right" data-aos-duration="1000">
-        <h2>About me</h2>
+        <h2 translate>About me</h2>
         <div class="about-me-content">
             <div class="content-child">
-                <p class="content-text aligned-left">Hi, I am a Front-end deverloper based in München,
+                <p class="content-text aligned-left" translate>Hi, I am a Front-end deverloper based in München,
                     Germany(....)Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut auctor sem non tempus
                     convallis. Integer et justo vitae urna finibus eleifend sit amet porttitor sapien. Donec
                     sollicitudin massa vel lorem vestibulum efficitur. </p>
@@ -13,7 +13,7 @@
                 <div class="icon-container">
                     <img class="icon" src="../../../assets/img/icons/lightbulb.png" alt="">
                 </div>
-                <p class="content-text left aligned-left">Some personal thing to share(...) Donec ut imperdiet diam, et
+                <p class="content-text left aligned-left" translate>Some personal thing to share(...) Donec ut imperdiet diam, et
                     convallis neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
                     himenaeos. </p>
             </div>
@@ -21,7 +21,7 @@
                 <div class="icon-container">
                     <img class="icon" src="../../../assets/img/icons/puzzle.png" alt="">
                 </div>
-                <p class="content-text aligned-left">Some personal thing to share(...) Donec ut imperdiet diam, et
+                <p class="content-text aligned-left" translate>Some personal thing to share(...) Donec ut imperdiet diam, et
                     convallis neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
                     himenaeos. </p>
             </div>
