--- a/src/app/main-content/portfolio/portfolio.component.html
+++ b/src/app/main-content/portfolio/portfolio.component.html
@@ -3,8 +3,8 @@
     <div class="portfolio-headline-container" data-aos="fade-left" data-aos-duration="1000">
         <div class="horicontal-lign w-short"></div>
         <div class="portfolio-headline-content">
-            <h2>Portfolio</h2>
-            <p class="content-text aligned-center mobile-hidden" data-aos="fade-right" data-aos-duration="1000">This page is a sample of my work - please feel free to try them out.
+            <h2 translate>Portfolio</h2>
+            <p class="content-text aligned-center mobile-hidden" data-aos="fade-right" data-aos-duration="1000" translate>This page is a sample of my work - please feel free to try them out.
             </p>
         </div>
         <div class="horicontal-lign w-long"></div>
@@ -12,7 +12,7 @@
 
     <div class="portfolio-projects-container">
 
-        <p class="content-text aligned-center desktop-hidden" data-aos="fade-right" data-aos-duration="1000">This page is a sample of my work - please feel free to try them out.
+        <p class="content-text aligned-center desktop-hidden" data-aos="fade-right" data-aos-duration="1000" translate>This page is a sample of my work - please feel free to try them out.
         </p>
 
         <app-project *ngFor="let project of portfolio; let i = index" [projectname]="project.projectname"
