--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,15 +10,15 @@
         </div>
         <div class="nav-container">
             <div class="nav-child mobile-hidden">
-                <a class="nav-link" href="#aboutme">About me</a>
+                <a class="nav-link" href="#aboutme" translate>About me</a>
                 <div class="underline"></div>
             </div>
             <div class="nav-child mobile-hidden">
-                <a class="nav-link" href="#skills">Skills</a>
+                <a class="nav-link" href="#skills" translate>Skills</a>
                 <div class="underline"></div>
             </div>
             <div class="nav-child mobile-hidden">
-                <a class="nav-link" href="#portfolio">Portfolio</a>
+                <a class="nav-link" href="#portfolio" translate>Portfolio</a>
                 <div class="underline"></div>
             </div>
         </div>
