--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -4,26 +4,19 @@
         <h2 translate>About me</h2>
         <div class="about-me-content">
             <div class="content-child">
-                <p class="content-text aligned-left" translate>Hi, I am a Front-end deverloper based in München,
-                    Germany(....)Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut auctor sem non tempus
-                    convallis. Integer et justo vitae urna finibus eleifend sit amet porttitor sapien. Donec
-                    sollicitudin massa vel lorem vestibulum efficitur. </p>
+                <p class="content-text aligned-left" translate>About me main description</p>
             </div>
             <div class="content-child">
                 <div class="icon-container">
                     <img class="icon" src="../../../assets/img/icons/lightbulb.png" alt="">
                 </div>
-                <p class="content-text left aligned-left" translate>Some personal thing to share(...) Donec ut imperdiet diam, et
-                    convallis neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-                    himenaeos. </p>
+                <p class="content-text left aligned-left" translate>About me personal things 1</p>
             </div>
             <div class="content-child">
                 <div class="icon-container">
                     <img class="icon" src="../../../assets/img/icons/puzzle.png" alt="">
                 </div>
-                <p class="content-text aligned-left" translate>Some personal thing to share(...) Donec ut imperdiet diam, et
-                    convallis neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-                    himenaeos. </p>
+                <p class="content-text aligned-left" translate>About me personal things 2</p>
             </div>
         </div>
     </div>
