--- a/src/app/main-content/landing/landing.component.html
+++ b/src/app/main-content/landing/landing.component.html
@@ -5,10 +5,10 @@
     </div>
     <div class="text-container">
         <div class="headline">
-            <span data-aos="fade-down" data-aos-duration="1000" data-aos-delay="600" translate>I am</span>
+            <span data-aos="fade-down" data-aos-duration="1000" data-aos-delay="100" translate [class.de-iAm]="currentLanguage === 'de'">I am</span>
             <div class="main-headline" data-aos="fade-left" data-aos-duration="1000">
                 <h1>Tobias Termer</h1>
-                <h3 translate>Fullstack Developer</h3>
+                <h3 translate>Frontend Developer</h3>
             </div>
         </div>
         <div class="btn-container" data-aos="fade-down-left" data-aos-duration="1000">
