--- a/src/app/main-content/landing/landing.component.scss
+++ b/src/app/main-content/landing/landing.component.scss
@@ -69,6 +69,11 @@ section {
             margin-left: -25px;
         }
 
+        .de-iAm {
+            font-size: 40px !important;
+            margin-right: -30px !important;
+        }
+
         .main-headline {
             display: flex;
             flex-direction: column;
@@ -203,6 +208,11 @@ section {
                 white-space: nowrap;
             }
 
+            .de-iAm {
+                font-size: 27px !important;
+                margin-right: -25px !important;
+            }
+
             .main-headline {
                 display: flex;
                 flex-direction: column;
@@ -275,6 +285,11 @@ section {
                 font-size: 5.5vw;
             }
 
+            .de-iAm {
+                font-size: 3.5vw !important;
+                margin-right: -15px !important;
+            }
+
             .main-headline {
 
                 h1 {
@@ -320,6 +335,11 @@ section {
             span {
                 font-size: 6.5vw;
                 margin-right: -10px;
+            }
+
+            .de-iAm {
+                font-size: 4.5vw !important;
+                margin-right: -15px !important;
             }
 
             .main-headline {
