--- a/src/app/main-content/portfolio/project/project.component.html
+++ b/src/app/main-content/portfolio/project/project.component.html
@@ -10,7 +10,7 @@
             <p class="content-text">{{ description }}</p>
         </div>
         <div class="project-buttons" [ngClass]="{'jc-flexend': index !== undefined && index % 2 !== 0}">
-            <a class="btn btn-project" href="{{ linkLive }}" target="blank">Live test</a>
+            <a class="btn btn-project" href="{{ linkLive }}" target="blank" translate>Live test</a>
             <a class="btn btn-git" href="{{ linkGit }}" target="blank">Github</a>
         </div>
     </div>
