--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -16,6 +16,10 @@
             </div>
         </div>
     </div>
-    <a href="/impressum" translate>Impressum</a>
-
+    <div class="footer-row2">
+        <a href="/impressum" translate>Impressum</a>
+        <p>|</p>
+        <a href="/datenschutz" translate>Datenschutz</a>    
+    </div>
+    
 </footer>
