--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -58,6 +58,16 @@ footer {
         width: 216px;
         height: auto;
     }
+
+    .footer-row2 {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+
+        p {
+            color: white;
+        }
+    }
 }
 
 @media (max-width: $tablet-breakpoint) {
@@ -75,6 +85,15 @@ footer {
 
             .logo-firstname{
                 margin-bottom: 24px;
+            }
+        }
+
+        .footer-row2 {
+            flex-direction: column;
+            gap: 10px;
+
+            p {
+                display: none;
             }
         }
     }
