--- a/src/app/shared/header-mobile/header-mobile.component.html
+++ b/src/app/shared/header-mobile/header-mobile.component.html
@@ -6,9 +6,9 @@
     <nav [ngClass]="[menuStyle]">
         <div class="nav-container">
             <div class="language-container">
-                <a class="language-link" href="" (click)="clickLink()">DE</a>
+                <a class="language-link" (click)="switchLanguage('de'); clickLink();">DE</a>
                 <div class="vertical-lign"></div>
-                <a class="language-link" href="" (click)="clickLink()">EN</a>
+                <a class="language-link" (click)="switchLanguage('en'); clickLink();">EN</a>
             </div>
             <div class="nav-child">
                 <a class="nav-link" href="#aboutme" (click)="clickLink()" translate>About me</a>
@@ -24,10 +24,6 @@
             </div>
             <div class="nav-child">
                 <a class="nav-link" href="#contact" (click)="clickLink()" translate>Contact</a>
-                <div class="underline"></div>
-            </div>
-            <div class="nav-child">
-                <a class="nav-link" href="/impressum" (click)="clickLink()" translate>Impressum</a>
                 <div class="underline"></div>
             </div>
         </div>
