--- a/src/app/datenschutz/datenschutz.component.html
+++ b/src/app/datenschutz/datenschutz.component.html
@@ -20,9 +20,9 @@
             <div>
                 <h4 translate>Wie erfassen wir Ihre Daten?</h4>
                 <p translate>Ihre Daten werden zum einen dadurch erhoben, dass Sie uns diese mitteilen. Hierbei kann es
-                    sich z.&nbsp;B. um Daten handeln, die Sie in ein Kontaktformular eingeben.</p>
+                    sich z.B. um Daten handeln, die Sie in ein Kontaktformular eingeben.</p>
                 <p translate>Andere Daten werden automatisch oder nach Ihrer Einwilligung beim Besuch der Website durch
-                    unsere IT-Systeme erfasst. Das sind vor allem technische Daten (z.&nbsp;B. Internetbrowser,
+                    unsere IT-Systeme erfasst. Das sind vor allem technische Daten (z.B. Internetbrowser,
                     Betriebssystem oder Uhrzeit des Seitenaufrufs). Die Erfassung dieser Daten erfolgt automatisch,
                     sobald Sie diese Website betreten.</p>
             </div>
@@ -57,7 +57,7 @@
                 berechtigtes Interesse an einer möglichst zuverlässigen Darstellung unserer Website. Sofern eine
                 entsprechende Einwilligung abgefragt wurde, erfolgt die Verarbeitung ausschließlich auf Grundlage von
                 Art. 6 Abs. 1 lit. a DSGVO und § 25 Abs. 1 TTDSG, soweit die Einwilligung die Speicherung von Cookies
-                oder den Zugriff auf Informationen im Endgerät des Nutzers (z.&nbsp;B. Device-Fingerprinting) im Sinne
+                oder den Zugriff auf Informationen im Endgerät des Nutzers (z.B. Device-Fingerprinting) im Sinne
                 des TTDSG umfasst. Die Einwilligung ist jederzeit widerrufbar.</p>
             <h4 translate>Auftragsverarbeitung</h4>
             <p translate>Wir haben einen Vertrag über Auftragsverarbeitung (AVV) zur Nutzung des oben genannten Dienstes
@@ -77,7 +77,7 @@
                 Personenbezogene Daten sind Daten, mit denen Sie persönlich identifiziert werden können. Die vorliegende
                 Datenschutzerklärung erläutert, welche Daten wir erheben und wofür wir sie nutzen. Sie erläutert auch,
                 wie und zu welchem Zweck das geschieht.</p>
-            <p translate>Wir weisen darauf hin, dass die Datenübertragung im Internet (z.&nbsp;B. bei der Kommunikation
+            <p translate>Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation
                 per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch
                 Dritte ist nicht möglich.</p>
         </div>
@@ -90,7 +90,7 @@
             <p translate>Telefon: +49 1573-5686236<br />
                 E-Mail: mail(at)tobias-termer.de</p>
             <p translate>Verantwortliche Stelle ist die natürliche oder juristische Person, die allein oder gemeinsam
-                mit anderen über die Zwecke und Mittel der Verarbeitung von personenbezogenen Daten (z.&nbsp;B. Namen,
+                mit anderen über die Zwecke und Mittel der Verarbeitung von personenbezogenen Daten (z.B. Namen,
                 E-Mail-Adressen o. Ä.) entscheidet.</p>
         </div>
         <div>
@@ -99,7 +99,7 @@
                 verbleiben Ihre personenbezogenen Daten bei uns, bis der Zweck für die Datenverarbeitung entfällt. Wenn
                 Sie ein berechtigtes Löschersuchen geltend machen oder eine Einwilligung zur Datenverarbeitung
                 widerrufen, werden Ihre Daten gelöscht, sofern wir keine anderen rechtlich zulässigen Gründe für die
-                Speicherung Ihrer personenbezogenen Daten haben (z.&nbsp;B. steuer- oder handelsrechtliche
+                Speicherung Ihrer personenbezogenen Daten haben (z.B. steuer- oder handelsrechtliche
                 Aufbewahrungsfristen); im letztgenannten Fall erfolgt die Löschung nach Fortfall dieser Gründe.</p>
         </div>
         <div>
@@ -109,7 +109,7 @@
                 Datenkategorien nach Art. 9 Abs. 1 DSGVO verarbeitet werden. Im Falle einer ausdrücklichen Einwilligung
                 in die Übertragung personenbezogener Daten in Drittstaaten erfolgt die Datenverarbeitung außerdem auf
                 Grundlage von Art. 49 Abs. 1 lit. a DSGVO. Sofern Sie in die Speicherung von Cookies oder in den Zugriff
-                auf Informationen in Ihr Endgerät (z.&nbsp;B. via Device-Fingerprinting) eingewilligt haben, erfolgt die
+                auf Informationen in Ihr Endgerät (z.B. via Device-Fingerprinting) eingewilligt haben, erfolgt die
                 Datenverarbeitung zusätzlich auf Grundlage von § 25 Abs. 1 TTDSG. Die Einwilligung ist jederzeit
                 widerrufbar. Sind Ihre Daten zur Vertragserfüllung oder zur Durchführung vorvertraglicher Maßnahmen
                 erforderlich, verarbeiten wir Ihre Daten auf Grundlage des Art. 6 Abs. 1 lit. b DSGVO. Des Weiteren
@@ -124,7 +124,7 @@
             <p translate>Im Rahmen unserer Geschäftstätigkeit arbeiten wir mit verschiedenen externen Stellen zusammen.
                 Dabei ist teilweise auch eine Übermittlung von personenbezogenen Daten an diese externen Stellen
                 erforderlich. Wir geben personenbezogene Daten nur dann an externe Stellen weiter, wenn dies im Rahmen
-                einer Vertragserfüllung erforderlich ist, wenn wir gesetzlich hierzu verpflichtet sind (z.&nbsp;B.
+                einer Vertragserfüllung erforderlich ist, wenn wir gesetzlich hierzu verpflichtet sind (z.B.
                 Weitergabe von Daten an Steuerbehörden), wenn wir ein berechtigtes Interesse nach Art. 6 Abs. 1 lit. f
                 DSGVO an der Weitergabe haben oder wenn eine sonstige Rechtsgrundlage die Datenweitergabe erlaubt. Beim
                 Einsatz von Auftragsverarbeitern geben wir personenbezogene Daten unserer Kunden nur auf Grundlage eines
@@ -199,7 +199,7 @@
                     personenbezogenen Daten zu verlangen.</li>
             </ul>
             <p translate>Wenn Sie die Verarbeitung Ihrer personenbezogenen Daten eingeschränkt haben, dürfen diese Daten
-                – von ihrer Speicherung abgesehen – nur mit Ihrer Einwilligung oder zur Geltendmachung, Ausübung oder
+                - von ihrer Speicherung abgesehen - nur mit Ihrer Einwilligung oder zur Geltendmachung, Ausübung oder
                 Verteidigung von Rechtsansprüchen oder zum Schutz der Rechte einer anderen natürlichen oder juristischen
                 Person oder aus Gründen eines wichtigen öffentlichen Interesses der Europäischen Union oder eines
                 Mitgliedstaats verarbeitet werden.</p>
@@ -230,8 +230,8 @@
                 widerrufbar.</p>
             <p translate>Die von Ihnen im Kontaktformular eingegebenen Daten verbleiben bei uns, bis Sie uns zur
                 Löschung auffordern, Ihre Einwilligung zur Speicherung widerrufen oder der Zweck für die
-                Datenspeicherung entfällt (z.&nbsp;B. nach abgeschlossener Bearbeitung Ihrer Anfrage). Zwingende
-                gesetzliche Bestimmungen – insbesondere Aufbewahrungsfristen – bleiben unberührt.</p>
+                Datenspeicherung entfällt (z.B. nach abgeschlossener Bearbeitung Ihrer Anfrage). Zwingende
+                gesetzliche Bestimmungen - insbesondere Aufbewahrungsfristen - bleiben unberührt.</p>
         </div>
     </div>
     <div>
