responsive on big screen > 1900 px width

--- a/src/app/datenschutz/datenschutz.component.html
+++ b/src/app/datenschutz/datenschutz.component.html
@@ -1,4 +1,4 @@
-<section>
+<section id="datenschutz">
     <h1 translate>Datenschutz</h1>
     <div>
         <h2 translate>Datenschutz auf einen Blick</h2>
@@ -246,4 +246,5 @@
         </div>
     </div>
     <p translate>Quelle: <a href="https://www.e-recht24.de" translate>eRecht24</a></p>
+
 </section>
