--- a/src/app/shared/header-mobile/header-mobile.component.scss
+++ b/src/app/shared/header-mobile/header-mobile.component.scss
@@ -136,6 +136,14 @@ header {
     left: 100vw !important;
 }
 
+@media (min-width: $tablet-breakpoint) {
+
+    header {
+        display: none;
+    }
+
+}
+
 @media (max-width: $tablet-breakpoint) {
 
     header {
