--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -123,6 +123,7 @@ section {
             flex-direction: column;
             align-items: center;
             gap: 12px;
+            position: relative;
         }
 
         button:disabled {
@@ -153,27 +154,20 @@ section {
     top: -100px;
 }
 
-
 .shadow2 {
     left: -450px;
     bottom: -400px;
 }
 
-
-.arrow-up {
+.overlay {
     position: absolute;
-    right: 100px;
-    bottom: 50px;
-
-    img{
-        height: 39px;
-        width: 39px;
-    }
-
-    &:hover {
-        cursor: pointer;
-    }
-}
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: transparent;
+    cursor: pointer;
+  }
 
 @media (max-width: $wide-breakpoint) {
 
@@ -193,10 +187,6 @@ section {
 
     .contact-content-container {
         padding-left: calc($padding_side / 2);
-    }
-
-    .arrow-up {
-        right: calc($padding_side / 2);
     }
 
     .contact-headline-container {
@@ -220,10 +210,6 @@ section {
         padding-left: calc($padding_side / 4);
     }
 
-    .arrow-up {
-        right: calc($padding_side / 4);
-    }
-
     .contact-headline-container {
         gap: 5px;
     
@@ -231,5 +217,34 @@ section {
             min-width: calc($padding_side / 4 - 5px);
             margin-top: 35px;
         }
+    }
+}
+
+
+@media (min-width: $bigscreen-breakpoint) {
+
+    section {
+        padding-right: $padding_side_bigscreen;
+    }
+
+    .contact-content-container {
+        padding-left: $padding_side_bigscreen;
+    }
+
+    .contact-headline-container {    
+        .horicontal-lign {
+            min-width: calc($padding_side_bigscreen - 50px);
+            // margin-top: 35px;
+        }
+    }
+
+    .shadow1 {
+        right: -350px;
+        top: 100px;
+    }
+    
+    .shadow2 {
+        left: -250px;
+        bottom: -400px;
     }
 }
