--- a/src/app/main-content/portfolio/project/project.component.scss
+++ b/src/app/main-content/portfolio/project/project.component.scss
@@ -24,7 +24,7 @@
         display: flex;
         flex-direction: column;
         gap: 35px;
-        max-width: 45%;
+        max-width: 500px;
 
         .text-content-container {
             display: flex;
@@ -68,7 +68,7 @@
         }
 
         .project-content {
-            max-width: unset;
+            // max-width: unset;
             
             .project-buttons {
                 gap: 35px;
