--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -129,3 +129,13 @@ header {
         width: 150px;
     }
 }
+
+@media (min-width: $bigscreen-breakpoint) {
+
+    header{
+        width: calc(100% - $padding_side_bigscreen * 2);
+        padding-left: $padding_side_bigscreen;
+        padding-right: $padding_side_bigscreen;
+    }
+
+}
